--- a/package.json
+++ b/package.json
@@ -49,8 +49,12 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.0",
     "husky": "^2.2.0",
+    "moxios": "^0.4.0",
     "prettier": "^1.17.0",
-    "pretty-quick": "^1.10.0"
+    "pretty-quick": "^1.10.0",
+    "redux-mock-store": "^1.5.3"
   }
 }
